--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,11 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimaryLogin">#ffbf00</color>
+    <color name="colorPrimaryDarkLogin">#485057</color>
+    <color name="colorAccentLogin">#485057</color>
+    <color name="colorBackground">#ffbf00</color>
+    <color name="colorText">#FFFFFF</color>
+    <color name="colorTextHint">#485057</color>
+    <color name="materialGray">#EEEEEE</color>
 </resources>
